--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -5,24 +5,60 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:  # Permette esecuzione manuale
 
 jobs:
+  # Job 1: Build e Test
   build-and-test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
-
+    
     - name: Set up Python 3.9
       uses: actions/setup-python@v4
       with:
         python-version: "3.9"
-
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
+    
     - name: Run Unit Tests
+      run: python test_app.py
+    
+    - name: Validate Model Loading
       run: |
-        python test_app.py
+        python -c "
+        from app import SentimentAnalyzer
+        analyzer = SentimentAnalyzer()
+        result = analyzer.predict('Test validation')
+        assert 'sentiment' in result
+        print('✅ Model validation passed!')
+        "
+
+  # Job 2: Deploy su HuggingFace Spaces
+  deploy-to-huggingface:
+    runs-on: ubuntu-latest
+    needs: build-and-test  # Parte solo se i test passano
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Deploy to HuggingFace Spaces
+      env:
+        HF_TOKEN: ${{ secrets.HF_TOKEN }}
+      run: |
+        pip install huggingface_hub
+        python -c "
+        from huggingface_hub import HfApi
+        api = HfApi()
+        api.upload_folder(
+            folder_path='.',
+            repo_id='${{ secrets.HF_SPACE_NAME }}',
+            repo_type='space',
+            token='${{ secrets.HF_TOKEN }}'
+        )
+        print('✅ Deployed to HuggingFace Spaces!')
+        "
